[package]
name = "projectlb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
hyper = { version = "0.14.27", features = ["full"] }
pingora = { version = "0.1.0", features = ["cache","lb","proxy"] }
rs-consul = "0.5.0"
serde_yaml = "0.9.33"
