[package]
name = "projectlb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
futures = "0.3.30"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.21"
pingora = { version = "0.1.0", features = ["lb"] }
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-load-balancing = "0.1.0"
pingora-proxy = "0.1.0"
regex = "1.10.4"
#rs-consul = "0.5.0"
rs-consul = { path = "../rs-consul" }
serde_yaml = "0.9.33"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
